--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -11,15 +11,18 @@
 @import "./components/badges.css";
 @import "./components/buttons.css";
 @import "./components/dropdowns.css";
+@import "./components/empty-states.css";
 @import "./components/inputs.css";
-@import "./components/overlays.css";
+@import "./components/tooltips.css";
 /* Overrides */
 @import "./overrides/codemirror.css";
 @import "./overrides/legacy-modals.css";
 /* Tokens */
+@import "./tokens/colors.css";
 @import "./tokens/elevation.css";
 @import "./tokens/spacing.css";
 @import "./tokens/typography.css";
 /* Utilities */
 @import "./utilities/display.css";
+@import "./utilities/focus.css";
 @import "./utilities/motion.css";
