create new search component

--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -13,6 +13,7 @@
 @import "./components/dropdowns.css";
 @import "./components/empty-states.css";
 @import "./components/inputs.css";
+@import "./components/search-input.css";
 @import "./components/tooltips.css";
 /* Overrides */
 @import "./overrides/codemirror.css";
